...
      return (
        <View style={styles.row}>
          <View style={styles.cardContainer}>
            <ProductItemCard
              item={item.left}
              isFavorite={leftIsFavorite}
              testID="favorites-product-card"
              onPress={onPressProduct}
            />
          </View>
          {item.right ? (
            <View style={styles.cardContainer}>
              <ProductItemCard
...

  // Render
  if (!favoriteProducts.length) {
    return (
      <RootView noSafeArea>
        <EmptyListView
          title="No favorites yet"
          description="Like products to see them grouped by category here."
        />
      </RootView>
    );
  }

...
