...
      <Tab.Screen
        name="Favorites"
        component={FavoritesScreen}
        options={{
          tabBarIcon: FavoritesIcon,
          title: "Favorites",
          tabBarButtonTestID: "tab-favorites",
          headerShown: true,
          headerShadowVisible: false,
        }}
      />
      <Tab.Screen
        name="Debug"
...
