...
  const renderItem: ListRenderItem<Product> = ({ item }) => {
    const isFavorite = useFavoriteProductsStore.getState().isFavorite(item.id);
    return (
      <ProductItemCard
        item={item}
        isFavorite={isFavorite}
        testID="products-product-card"
        onPress={(product) => navigate("ProductDetail", { product })}
      />
    );
  };

  const handleEndReached = () => {
...
